Fix of hided navbar on mobiles

--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,9 @@
 html {
     font-family: "Roboto", sans-serif;
     scroll-behavior: smooth;
+    & body {
+        overflow-y: auto
+    }
 }
 path {
     transition: 0.2s;
